# src/routes/walletRoutes.js
@@ -1,0 +1,8 @@
+const express = require("express");
+const router = express.Router();
+const walletController = require("./../controllers/walletController");
+const authenticateToken = require("./../middleware/jwtMiddleware");
+
+router.get("/", authenticateToken, walletController.getWallet);
+
+module.exports = router;
